[gd_scene load_steps=8 format=3 uid="uid://crvb5k7fxhxlk"]

[ext_resource type="Script" uid="uid://b1bybni3br7as" path="res://Entities/Letters/Letter2D/letter_2d.gd" id="1_wv3jd"]
[ext_resource type="PackedScene" uid="uid://dkm5o1qn5fv2p" path="res://Entities/Framebars/letterFramebar/FrameBar.tscn" id="2_8bp8v"]
[ext_resource type="PackedScene" uid="uid://cb5w2yq6f7axj" path="res://Entities/Letters/LetterDisplay/LetterDisplay.tscn" id="3_g5jtj"]
[ext_resource type="Script" uid="uid://jcv0ems6dx8s" path="res://Entities/Letters/LetterUnit/letter_unit.gd" id="4_ydupv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmgim"]
size = Vector2(50.4, 51.3514)

[sub_resource type="Gradient" id="Gradient_wv3jd"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wv3jd"]
gradient = SubResource("Gradient_wv3jd")

[node name="Letter2D" type="Sprite2D"]
script = ExtResource("1_wv3jd")

[node name="Area2D" type="Area2D" parent="."]
light_mask = 2
scale = Vector2(1.875, 1.85)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
shape = SubResource("RectangleShape2D_cmgim")

[node name="FrameBar" type="Node2D" parent="."]

[node name="FrameBar" parent="FrameBar" instance=ExtResource("2_8bp8v")]

[node name="Display" type="Node2D" parent="."]

[node name="LetterDisplay" parent="Display" instance=ExtResource("3_g5jtj")]

[node name="LetterUnit" type="Node2D" parent="."]
script = ExtResource("4_ydupv")
metadata/_custom_type_script = "uid://jcv0ems6dx8s"

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.392157)
show_behind_parent = true
position = Vector2(7.62939e-06, -48)
scale = Vector2(0.378906, 94)
texture = SubResource("GradientTexture1D_wv3jd")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
